# zivali

./: build.sh  manage.py  pyproject.toml
zivali/: asgi.py  settings.py  urls.py  wsgi.py
