[tool.poetry]
name = "zivali"
version = "0.1.0"
description = ""
authors = ["DenisBavcar <denis.bavcar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
